completely scrapped out the first section. cleaned out the code by rewriting the first section following a proper and consistent spacing and good code quality. styled th first section using the external stylesheet. first added collective styles to be inherited collectively  by all the sismilar css selectors to DRY the code. Styled the first section, by adding a background color and properly referencing the images to the correct paths and added the typewriter effect styles. Then made the first section responsive by adding media queries just below the first section styles, to make it easier to locate and add onto the code if any responsive edits might be required.

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,41 @@ html, body {
   overflow-x: hidden;
 }
 
+
+/* MAIN SECTION STYLES TO BE INHERITED BY SIMILAR-SELECTORS COLLECTIVELY FROM HERE UNTIL NEXT COMMENT */
+
+body {
+  background-color: #ffffff;
+  margin: 0;
+  font-family: 'Titillium Web', sans-serif;
+}
+
+section {
+  margin: 20px 0;
+  padding: 20px 0;
+}
+p {
+  margin-bottom: 15px;
+}
+
+h1 {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 56px;
+  text-align: center;
+}
+h2 {
+  font-size: 45px;
+}
+h6,
+h5 {
+  color: #459de9;
+  font-weight: bold;
+}
+
+.buttons {
+  margin: 55px 0px;
+}
+
 /* --- Header Styles ---- */
 .navbar {
   box-shadow: inset 0 -1px 0 0 #cfd8dd;
@@ -62,37 +97,10 @@ header a:hover{
   }
 }
 
-
-/* MAIN SECTION STYLES FROM HERE UNTIL NEXT COMMENT */
-
-    body {
-    background-color: #ffffff;
-    margin: 0;
-    font-family: 'Titillium Web', sans-serif;
-  }
-
-  section {
-    margin: 20px 0;
-    padding: 20px 0;
-  }
-
-  h1 {
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 56px;
-    text-align: center;
-  }
-
-  h6.font-weight-bold {
-    color: #459de9;
-    font-weight: bold;
-  }
-
-  /* FIRST SECTION STYLES - HERO IMAGE AND THE NEXT LEVEL TRAINING HEADING*/
-
-.Next-level-training,
+/* ---first section --- */
+.Banner-Wrapper,
 .contacts-banner-wrap {
     font-family: 'Titillium Web', sans-serif;
-   
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -100,33 +108,17 @@ header a:hover{
     letter-spacing: normal;
     text-align: center;
     color: var(--charcoal-grey);
-    padding: 60px;
+    padding: 60px 0px;
     background-color: rgba(91, 157, 227, 0.08);
     margin-top: 0;
-    
   }
-  .Next-level-training {
-    font-size: 56px; 
+  .Next-level-training{
+    font-size: 56px;
   }
-
-  .text-style-1 {
-      margin: 0;
+  .typewrite {
+    color: #4a90e2;
+    font-weight: bolder;
   }
-
-  .Take-your-tech-caree {
-    /* width: 882px; */
-    height: 78px;
-    font-family: Titillium;
-    font-size: 18px;
-    font-weight: 600;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.44;
-    letter-spacing: normal;
-    text-align: center;
-    color: var(--charcoal-grey);
-  }
-  
   .button-more {
     width: 300px;
     height: 60px;
@@ -136,29 +128,21 @@ header a:hover{
     color: #ffffff;
     text-decoration: none;
   }
-
   .button-more:hover {
     background-color: #ffffff;
     border: solid 2px #4a90e2;
     color: #4a90e2;
   }
-
-  .FIND-OUT-MORE {
-    /* width: 204px;
-    height: 19px; */
-    font-family: Titillium;
-    font-size: 18px;
-    font-weight: 600;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: center;
-    margin: 0;
+  /* Media Query */
+  @media all and (max-width: 767px){
+    .Next-level-training,
+    .thank-you{
+      font-size: 34px;
+    }
   }
-
-
-    /* ---- Second Section--- */
+    
+  
+  /* ---- Second Section--- */
 
   
 #side-bar-summary {
